new repo for digital clock

--- a/style.css
+++ b/style.css
@@ -1,35 +1,22 @@
-#container {
-  font-family: arial, sans-serif;
-  text-align: center;
-  font-size: 2rem;
-  font-weight: bold;
+body {
+  background-image: url(image/Ruse1.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  margin: 0;
 }
-button {
-  font-size: 1.5rem;
-  padding: 10px 15px;
-  border-radius: 10px;
-  border: none;
-  background-color: hsl(13, 89%, 55%);
+#clock-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+#clock {
+  font-family: monospace;
+  font-size: 6.5rem;
+  font-weight: bold;
+  text-align: center;
   color: white;
-  font-weight: bold;
-  cursor: pointer;
-}
-button:hover {
-  background-color: hsl(13, 89%, 65%);
-}
-button:active {
-  background-color: hsl(13, 89%, 75%);
-}
-input {
-  font-size: 2rem;
-  width: 150px;
-  text-align: center;
-  font-weight: bold;
-}
-#diceResult {
-  margin: 25px;
-}
-#diceImages img {
-  width: 150px;
-  margin: 5px;
+  backdrop-filter: blur(5px);
 }
